[tool.poetry]
name = "carpathian_beer"
version = "0.1.0"
description = ""
authors = ["Florina Macicasan <florina.macicasan@fortech.ro>"]

[tool.poetry.dependencies]
python = "3.8"
requests = "^2.25.1"
flake8 = "^3.9.2"
black = "^21.5b1"
isort = "^5.8.0"
reorder-python-imports = "^2.5.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
