[tool.poetry]
name = "carpathian_beer"
version = "0.1.0"
description = ""
authors = ["Florina Macicasan <florina.macicasan@fortech.ro>"]

[tool.poetry.dependencies]
python = "3.8.10"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^21.5b1"
isort = "^5.8.0"
pytest = "^6.2.4"
responses = "^0.13.3"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
carpathian_beer = "carpathian_beer.cli:carpathian_beer"
